--- a/05ml/x5p26_k_means_simple.Rmd
+++ b/05ml/x5p26_k_means_simple.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Simple example of k-means clustering"
-author: "M. Asch"
-date: "21/10/2019"
+author: 
+date: 
 output:
   pdf_document: 
     keep_tex: yes
