--- a/11uq/x11p24_bayes_lin_reg_pp.ipynb
+++ b/11uq/x11p24_bayes_lin_reg_pp.ipynb
@@ -88,8 +88,7 @@
     "axes[1].scatter(X2, Y, alpha=0.6)\n",
     "axes[0].set_ylabel(\"Y\")\n",
     "axes[0].set_xlabel(\"X1\")\n",
-    "axes[1].set_xlabel(\"X2\");\n",
-    "plt.savefig('PP-LR2var-data.png',dpi=600)"
+    "axes[1].set_xlabel(\"X2\");"
    ]
   },
   {
@@ -204,8 +203,7 @@
    ],
    "source": [
     "with basic_model:\n",
-    "    az.plot_trace(trace);\n",
-    "plt.savefig('PP-LR2var-trace.png',dpi=600)"
+    "    az.plot_trace(trace);"
    ]
   },
   {
@@ -302,8 +300,7 @@
    ],
    "source": [
     "with basic_model:\n",
-    "    az.plot_trace(trace);\n",
-    "plt.savefig('PP-LR2var-trace2.png',dpi=600)"
+    "    az.plot_trace(trace);"
    ]
   },
   {
@@ -442,8 +439,7 @@
    ],
    "source": [
     "with basic_model:\n",
-    "    az.plot_posterior(trace,grid=(2,2));\n",
-    "plt.savefig('PP-LR2var-post.png',dpi=600)"
+    "    az.plot_posterior(trace,grid=(2,2));"
    ]
   },
   {
