--- a/03sim/x3p04_nonlineq/x3p04_nonlineq.ipynb
+++ b/03sim/x3p04_nonlineq/x3p04_nonlineq.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "62aba05e",
    "metadata": {},
    "source": [
     "We begin by finding the roots symbolically, using `sympy`. First, on a simple case $f(x)=x^2-1,$ then on $f(x)=x^3-3x+1.$"
@@ -10,6 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "b90d0f4f",
    "metadata": {},
    "outputs": [
     {
@@ -33,6 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "1f2777e1",
    "metadata": {},
    "outputs": [
     {
@@ -53,6 +56,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "16fe8d86",
    "metadata": {},
    "source": [
     "Note that the imaginary terms are roundoff errors, and can be ignored since $f(x)$ has real roots. Let us examine its graph."
@@ -61,6 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "67056b3a",
    "metadata": {},
    "outputs": [
     {
@@ -90,6 +95,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0d4e16fa",
    "metadata": {},
    "source": [
     "We check the symbolic roots."
@@ -98,6 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "7e0cfe74",
    "metadata": {},
    "outputs": [
     {
@@ -119,6 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "97665981",
    "metadata": {},
    "outputs": [
     {
@@ -138,6 +146,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4c0b3a16",
    "metadata": {},
    "source": [
     "We will use the following methods to find the three roots:\n",
@@ -153,6 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "18e31f6c",
    "metadata": {},
    "outputs": [
     {
@@ -174,6 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "c8bbdae5",
    "metadata": {},
    "outputs": [
     {
@@ -194,6 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "38da7996",
    "metadata": {},
    "outputs": [
     {
@@ -214,6 +226,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "58169c4e",
    "metadata": {},
    "source": [
     "To use a fixed-point iteration, we must reformulate the problem $f(x)=0$ as $g(x)=x.$ We obtain $$\\frac{x^3}{3} + \\frac{1}{3} =x.$$"
@@ -222,6 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "ec3cb8e6",
    "metadata": {},
    "outputs": [
     {
@@ -247,6 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "429cf872",
    "metadata": {},
    "outputs": [
     {
@@ -268,6 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "04ffe1ba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -275,7 +291,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -289,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
